[metadata]
name = suntransit
version = 0.1.0
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Simple, fast approximation of sunrise, sunset time on Earth
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS

[options]
include_package_data = True
packages = suntransit
python_requires = >=3.5
install_requires =
    numpy>=1.13.3

[options.extras_require]
docs = pdoc3>=0.9.2
